# openlab-watcher

./: .gitignore  LICENSE  README.md  pyproject.toml  state.json
.github/workflows/: check.yml
prompts/: conventions.md
scripts/: check.py
tests/: test_email_render.py  test_llm_call.py  test_llm_parse.py  test_prompt.py  test_repo_tree_filter.py  test_run_logging.py  test_run_loop.py  test_skip_rule.py  test_stable_context.py  test_state.py  test_workflow.py
tests/live/: test_anthropic_live.py  test_e2e_live.py  test_github_live.py  test_smtp_live.py
