[project]
name = "openlab-watcher"
version = "0.1.0"
description = "Polls davidmalawey/openLab and emails consistency notes"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
